--- a/css/my-style.css
+++ b/css/my-style.css
@@ -42,6 +42,7 @@ table {
     outline-color: #e74c3c;
     outline-style: double;
     outline-style: dotted;
+    border: 5px solid red;
 
 
 
@@ -55,7 +56,7 @@ td{
 }
 
 .title {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     font-style: italic;
     margin-top: 10px;
