--- a/css/my-style.css
+++ b/css/my-style.css
@@ -70,18 +70,31 @@ td{
 
 .intro {
 
-    background-color:  #5dade2 ;
+    background-color:   #a9f9f6;
+
     padding:10px;
     border-radius: 5px;
 }
 
 .mid{
 
-    background-color:   #aab7b8 ;
+    background-color:   #b2c5f9;
+ 
     padding:10px;
     border-radius: 5px;
 
 }
+
+
+.addr{
+
+   background-color:  #f9f4b2;
+   padding: 10px;
+   border-radius: 5px;
+
+
+}
+
 
 h6 {
 
@@ -105,7 +118,8 @@ h1   {
      margin-bottom: 10px; 
      margin-left: 0; 
      padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;
-     background-color: #FFFAF0;
+     background-color:  #a9f9f6;
+
      
    }
 
